2002-12-22  Manu B  <manubee@users.sourceforge.net>

	* ChangeLog started: MSYS Here version 0.1a.