@@ -12,3 +12,15 @@ REGEDIT4
 [HKEY_CLASSES_ROOT\Drive\shell\MsysHere\command]
 @="C:\\Dev\\Msys\\1.0\\msys.exe -h \"%1\""
 
+[HKEY_CLASSES_ROOT\Directory\shell\MsysDvlpr]
+@="&Msys Dvlpr"
+
+[HKEY_CLASSES_ROOT\Directory\shell\MsysDvlpr\command]
+@="C:\\Dev\\Msys\\1.0\\msys.exe -d -h \"%1\""
+
+[HKEY_CLASSES_ROOT\Drive\shell\MsysDvlpr]
+@="&Msys Dvlpr"
+
+[HKEY_CLASSES_ROOT\Drive\shell\MsysDvlpr\command]
+@="C:\\Dev\\Msys\\1.0\\msys.exe -d -h \"%1\""
+
